--- a/addons/resource.language.en_gb/resources/strings.po
+++ b/addons/resource.language.en_gb/resources/strings.po
@@ -17506,6 +17506,12 @@ msgctxt "#36511"
 msgid "Checkerboard"
 msgstr ""
 
+#. name of a stereoscopic mode
+#: system/settings/settings.xml
+msgctxt "#36512"
+msgid "MVC / Framepacking"
+msgstr "MVC"
+
 #empty strings from id 36512 to 36519
 #end of reserved strings for 3d modes
 
